# lum-lang

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  compile_commands.json  package-lock.json  package.json  test.lum
.github/workflows/: compile.yml  static_analyse.yml  tests.yml
Grammar/: lexer.ebnf
RoadMap/: roadMap.md
Syntax/: lexer.ebnf  lexer.html  start.lum  syntax-Test.lum  test.lum
includes/: CMakeLists.txt  Error.hpp  FileManager.hpp  Lexer.hpp  Token.hpp  lexer.hpp
sources/: Error.cpp  FileManager.cpp  Token.cpp  lexer.cpp  main.cpp
sources/Lexer/: Lexer.cpp  LexerErrorUtils.cpp  RegexMatcher.cpp  StaticMatcher.cpp
tests/: CMakeLists.txt  ErrorTest.cpp  FileManagerTest.cpp  LexerTest.cpp  TokenTest.cpp  test.lum  test_with_error.lum
